<resources>
    <string name="app_name">My IMC</string>
    <string name="MAPS_API_KEY" translatable="false">AIzaSyAP9NaXrTzzyg3jlfWIwcL6uYKVja3tgLo</string>
    <string name="imc_network">IMC Network</string>
    <string name="plesae_try_again">Problem loading data, please try again</string>
    <string name="plesae_mrn_number">Please check your mrn number</string>
    <string name="plesae_id_number">Please check your id number</string>
    <string name="channel_name" translatable="false">imc channel</string>
    <string name="version" translatable="false">Version 3.1.1</string>
    <string name="facebook_app_id" translatable="false">2287078814932300</string>
    <string name="app_flyer_dev_key" translatable="false">RZJpUoVLUtnp3atnSg65NP</string>
    <string name="please_wait">Please wait...</string>
    <string name="available">Available</string>
    <string name="reserved">Reserved</string>
    <string name="special_instructions">Special instructions:</string>
    <string name="complete_appointment_assessment_error">Assessments will be available till %1$d days of appointment completion.</string>
    <string name="upcoming_appointment_assessment_error">Assessments will be available only %1$d days prior to appointments slot.</string>
    <string name="first_name">First Name</string>
    <string name="screen_capture_error">Screen capturer error occurred.</string>
    <string name="screen_capture_permission_not_granted">Screen capture permission not granted</string>
    <string name="service_error">Service not availabe,  Please contact our call centre : +%1$s</string>
    <string name="appointment_successfully_booked">Your appointment booked successfully. You will get a reminder for this appointment prior 45 minutes of scheduled time.</string>
    <string name="invalid_user_id">Invalid user ID! Please try again.</string>
    <string name="pament_zero">There is no payment pending</string>
    <string name="profile_updated">Information updated successfully</string>
    <string name="validated_email">Validated email</string>
    <string name="emai_not_validate">Email couldn\'t be validated</string>
    <string name="email_sent">Email sent!</string>
    <string name="confirm1">Confirm</string>
    <string name="welcome_text">Welcome to \nInternational Medical Center</string>
    <string name="welcome_text_FC">Welcome to \nThe First Clinic</string>
    <string name="sign_in">Sign In</string>
    <string name="register_now">Register Now</string>
    <string name="request_appointment">Request an Appointment</string>
    <string name="have_ques">Have any Questions? Call or email us</string>
    <string name="des_signin">Patient Login</string>
    <string name="select_id">Login Id</string>
    <string name="mrn">MR Number</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="or_s">or</string>
    <string name="or_line">-- OR --</string>
    <string name="done">Done</string>
    <string name="login_id_hint">National/Iqama/Passport/Birth Not. ID</string>
    <string name="national_id_names">National/ Iqama No / Passport No</string>
    <string name="remember_me">Remember me</string>
    <string name="appointment_as_guest">Schedule an appointment as a guest</string>
    <string name="verify_number">Verifying your number!</string>
    <string name="verify_email">Verify your email!</string>
    <string name="otp_sent">We have sent an OTP on your number </string>
    <string name="enter_for_digit">Enter Four 4 Digit OTP</string>
    <string name="resend">Resend OTP?</string>
    <string name="guest_user">Guest User</string>
    <string name="payment_error">Payment Error. If amount is debited, please call +%1$s with transaction details</string>
    <string name="otp_successfully_sent">OTP sent successfully to registered mobile number</string>
    <string name="register_number">Register your mobile number</string>
    <string name="reg_content">We will send you an OTP to \n authenticate your account</string>
    <string name="country_code">Country code</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="submit">Submit</string>
    <string name="emergency_contact">Emergency Contact Details (different from registrant)</string>
    <string name="welcome">Welcome!</string>
    <string name="contine_send_otp">Continue and Send OTP</string>
    <string name="introduce">Open File Application</string>
    <string name="id_type">ID Type (National ID / Iqama / Passport / Birth Notification)*</string>
    <string name="id_number">Id Number *</string>
    <string name="upload">Upload</string>
    <string name="family_name">Family Name *</string>
    <string name="agree_to_policy"><![CDATA[I agree to <u><a href="https://www.imc.med.sa/en/terms-and-conditions" style="color:black"> Terms of Use</a></u>
    and <u><a href="https://www.imc.med.sa/en/social-media-policy" style="color:black">Privacy policy</a> </u>]]></string>
    <string name="note_signup"><b>Note: </b>IMC will not be liable in case information is not correctly provided by the patient.</string>
    <string name="certify_cobtent">I certify that I read the Consent for General Treatment and I certify that I will need to fill out and sign the consent upon arrival at the hospital. I hereby give consent to IMC to provide treatment for myself, my dependant or my relative and I have the legal right to sign for the patient being registered.</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="self">Self</string>
    <string name="legal_gurdian">Legal Gurdian</string>
    <string name="relative">Relative</string>
    <string name="submitter_invalid">Name must be between 10 and 70</string>
    <string name="upload_id_card">Add scanned copy of ID card (National/Iqama/Passport Number) *</string>
    <string name="do_you_valid_isurance">Do you have a valid insurance? *</string>
    <string name="insurance_compnay">Insurance Company *</string>
    <string name="policy_number">Policy Number</string>
    <string name="membership_id">Insurance Membership ID</string>
    <string name="submitter_name">Name of the Submitter *</string>
    <string name="relation_to_patiet">Relation to Patient *</string>
    <string name="insurance_expiry_date">Insurance Expiry Date</string>
    <string name="class_plan">Class/Plan</string>
    <string name="attach_insuarnce_card">Attach Insurance Card</string>
    <string name="introduce_page_two">Please enter your ID copy and Insurance details</string>
    <string name="home_tel">Home Phone Number *</string>
    <string name="abort">Abort</string>
    <string name="abort_mesgae">Do you want to abort signup?</string>
    <string name="attach_id_card">Please attach ID card scanned copy</string>
    <string name="select_insurance_company">Please select insurance company</string>
    <string name="max_file_size">File size should not greater than 1.5MB</string>
    <string name="note_max_file_size">(Note: File size should not be greater than 1.5MB.)</string>
    <string name="select_id_expiry_date">Please select ID expiry date</string>
    <string name="cancel_appointment_error">You cannot cancel this Appointment. Please call the Reservation/Appointment contact Center on:+ %1$s.</string>
    <string name="self_registration_success">Your registration has been successfully completed, we will be in touch with you shortly.</string>
    <string name="request_submitted_success">Your request has been successfully submitted, we will be in touch with you shortly.</string>
    <string name="result_not_published_yet">Result not published yet</string>
    <string name="checkin_faild">You are not in hospital checkIN diameter</string>
    <string name="no_telemedicine_services">No Telemedicine Services are available</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_">Phone Number *</string>
    <string name="phone_number_cell">Cell Phone Number *</string>
    <string name="phone_validation_note">(Please enter a valid number, an OTP will be sent to the number you provide to verify.)</string>
    <string name="address">Address</string>
    <string name="address_c">Address:</string>
    <string name="address_en">Address in English</string>
    <string name="address_ar">Address in Arabic</string>
    <string name="nationality">Nationality</string>
    <string name="nationality_req">Nationality *</string>
    <string name="appointment">Appointment</string>
    <string name="home">Home</string>
    <string name="records">Records</string>
    <string name="chatbot">Chatbot</string>
    <string name="profile">Profile</string>
    <string name="appointment_message">Past 1 year appointment details will be displayed.</string>
    <string name="new_reports">New reports</string>
    <string name="are_sure_logout">are you sure to log out.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dashboard_menu">Dashboard</string>
    <string name="documents_menu">Documents</string>
    <string name="medical_cards_menu">Medical Cards</string>
    <string name="add_guardian_menu">Add Guardian</string>
    <string name="settings_menu">Settings</string>
    <string name="about_us_menu">About Us</string>
    <string name="help_menu">Help</string>
    <string name="logout_menu">Logout</string>
    <string name="general">General</string>
    <string name="next_appointment">Your Next Appointment</string>
    <string name="reports">Reports</string>
    <string name="specialities">Specialities</string>
    <string name="manage_bookings">Manage Appointments</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="manage_appointment">Manage Appointment</string>
    <string name="view_booking">View your appointment history</string>
    <string name="medication_prescription">Prescriptions/Medications</string>
    <string name="prescription">Prescriptions</string>
    <string name="prescription_">Prescription</string>
    <string name="mayo_clinic">Mayo Clinic</string>
    <string name="retail">Retail &amp; Facilities</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="no_show">No Show</string>
    <string name="email_address">Email Address</string>
    <string name="ok">OK</string>
    <string name="my_orders">My Orders</string>
    <string name="health_calculators">Health Calculators</string>
    <string name="payment_option">Payment Option</string>
    <string name="payment_cash">Payment by Cash</string>
    <string name="credit_card">Credit card</string>
    <string name="medical_card">Medical card</string>
    <string name="total_upcoming">Total Upcoming Appointments:</string>
    <string name="add_email_id">Add/Verify Email</string>
    <string name="send_otp">Send OTP</string>
    <string name="make_sure">Make sure to use your own email address. This email will become tied to your medcial record.</string>
    <string name="otp_title">OTP*</string>
    <string name="enter_the_verification">Enter the verification code you received in your email.</string>
    <string name="close"> Close </string>
    <string name="string_continue">Continue</string>
    <string name="txt_healthcare">Home HealthCare</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="logo_text">logo</string>
    <string name="twilio_first_line">A simple chat app built using the</string>
    <string name="twilio_second_line">Twilio Chat API</string>
    <string name="image_text">image</string>
    <string name="login_button_text">Login</string>
    <string name="username_placeholder">username</string>
</resources>