<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_home_icon"
        android:title="@string/dashboard_menu" />

    <item
        android:id="@+id/nav_retail"
        android:icon="@drawable/ic_retails_icon"
        android:title="@string/retail"
        android:visible="false" />
    <item
        android:id="@+id/nav_health_calculators"
        android:icon="@drawable/ic_health_calculate"
        android:title="@string/health_calculators"
        android:visible="false" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_icon"
        android:title="@string/settings_menu" />

    <item
        android:id="@+id/nav_about_us"
        android:icon="@drawable/ic_about_us_icon"
        android:title="@string/about_us_menu" />

    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help_menu_icon"
        android:title="@string/help_menu" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout_menu" />


</menu>