<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_records"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/records" />

    <item
        android:id="@+id/nav_appointment"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/appointment" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/mayo"
        android:title="@string/mayo_clinic" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/profile" />


</menu>