<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_bg_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            style="@style/MyCustomTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="auto">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/upcomingTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming"

                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelled" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_show" />

            <!--            <com.google.android.material.tabs.TabItem-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="Arrived" />-->

        </com.google.android.material.tabs.TabLayout>

        <TextView
            android:id="@+id/total_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tab_layout"
            android:fontFamily="@font/roboto_regular"
            android:padding="5dp"
            android:text="@string/total_upcoming"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/appoinment_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/total_count"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

    </RelativeLayout>
    <include layout="@layout/content_no_data_no_bg" />

</RelativeLayout>
