<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edit_text_bg"
    android:padding="@dimen/_7sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/payment_option"
            android:textColor="#005497"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_big" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="@dimen/_8sdp">

            <RadioButton
                android:id="@+id/radio_cash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/_5sdp"
                android:text="@string/payment_cash"
                android:textColor="#005497"
                android:textSize="@dimen/text_size_normal" />


            <RadioButton
                android:id="@+id/radio_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/_5sdp"
                android:text="@string/credit_card"
                android:textColor="#005497"
                android:textSize="@dimen/text_size_normal" />


            <RadioButton
                android:id="@+id/radio_medical_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/_5sdp"
                android:text="@string/medical_card"
                android:textColor="#005497"
                android:textSize="@dimen/text_size_normal" />

        </RadioGroup>

        <TextView
            android:id="@+id/bt_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio_group"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/button_ok"
            android:paddingStart="@dimen/_45sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_45sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/ok"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_grey_circle"
        android:padding="@dimen/_8sdp"
        android:src="@drawable/ic_pop_cancel" />

</RelativeLayout>