<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff"
    android:orientation="vertical"
    android:padding="@dimen/_2sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_7sdp">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:text="@string/add_email_id"
            android:textColor="#ff000000"
            android:textSize="@dimen/_15sdp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@+id/txt_title"
            android:background="@drawable/white_legend_bg" />

        <TextView
            android:id="@+id/txt_email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:padding="@dimen/_5sdp"
            android:text="@string/email_address"
            android:textColor="#ff000000"
            android:textSize="@dimen/_15sdp" />

        <LinearLayout
            android:id="@+id/ll_emailaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_email_address"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_email_report"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:background="@drawable/email_address"
                android:inputType="textEmailAddress"
                android:maxLength="80"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/txtAddMail_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@color/color_ed_fill"
                android:backgroundTint="@color/app_green"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/send_otp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_make_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_emailaddress"
            android:padding="@dimen/_8sdp"
            android:text="@string/make_sure"
            android:textColor="#ff000000"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/txt_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_make_sure"
            android:padding="@dimen/_5sdp"
            android:text="@string/otp_title"
            android:textColor="#ff000000"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_otp"
            android:layout_weight="0.7"
            android:background="@drawable/email_address"
            android:inputType="number"
            android:maxLength="4"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/txt_otp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_otp"
            android:padding="@dimen/_8sdp"
            android:text="@string/enter_the_verification"
            android:textColor="#ff000000"
            android:textSize="@dimen/_10sdp" />

        <View
            android:id="@+id/view_one"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@+id/txt_otp_text"
            android:background="@drawable/white_legend_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_one"
            android:layout_marginBottom="@dimen/_15sdp"
            android:gravity="right"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/color_ed_fill"
                android:backgroundTint="@color/nav_title_color"

                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/close"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/txt_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@color/color_ed_fill"
                android:backgroundTint="@color/text_blue_color"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>